src/objects/Company__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company or Organisation</description>
        <inlineHelpText>Company Name or Organisation Name</inlineHelpText>
        <label>Company Name</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created-By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain(Industry)</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head__c</fullName>
        <label>Head</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <label>Locality</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <inlineHelpText>Product/Service</inlineHelpText>
        <label>Product</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <label>Sample</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <inlineHelpText>Location of the industry</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Domain__c</fullName>
        <inlineHelpText>Sub Domain/Related Industry/Market</inlineHelpText>
        <label>Sub Domain</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Site__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>is_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is-verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>teeee__c</fullName>
        <label>teeee</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Logo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CID-{0}</displayFormat>
        <label>Company ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <recordTypes>
        <fullName>All</fullName>
        <active>true</active>
        <label>All</label>
    </recordTypes>
    <recordTypes>
        <fullName>Esdm</fullName>
        <active>true</active>
        <label>Esdm</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>